--- a/hopfield/Dockerfile
+++ b/hopfield/Dockerfile
@@ -1,30 +1,58 @@
-FROM python:3.11-slim
+# Build stage
+FROM python:3.11-slim AS builder
 
-# Instalar dependencias del sistema
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+# Copy and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir --user -r requirements.txt
+
+# Runtime stage
+FROM python:3.11-slim
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Establecer directorio de trabajo
+# Create non-root user
+RUN groupadd -g 1001 appgroup && \
+    useradd -u 1001 -g appgroup -m appuser
+
 WORKDIR /app
 
-# Copiar archivos de dependencias
-COPY requirements.txt .
+# Copy Python packages from builder
+COPY --from=builder /root/.local /home/appuser/.local
 
-# Instalar dependencias de Python
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copiar código fuente
+# Copy application code
 COPY src/ ./src/
 COPY tests/ ./tests/
 
-# Establecer PYTHONPATH
-ENV PYTHONPATH=/app/src
+# Set environment variables
+ENV PYTHONPATH=/app/src \
+    PATH=/home/appuser/.local/bin:$PATH \
+    PYTHONUNBUFFERED=1 \
+    FLASK_ENV=production
 
-# Exponer puerto
+# Change ownership
+RUN chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
 EXPOSE 5000
 
-# Comando por defecto
-CMD ["python", "src/api_server.py"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
+
+# Use gunicorn for production
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "120", "--access-logfile", "-", "--error-logfile", "-", "api_server:app"]
+
