--- a/hopfield/requirements.txt
+++ b/hopfield/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.3
-numpy==1.24.3
-pytest==7.4.0
+Flask==3.0.2
+numpy==1.26.4
+pytest==8.0.0
 pytest-cov==4.1.0
 gunicorn==21.2.0
+pydantic==2.6.0
+python-dotenv==1.0.1
